--- a/0-intro.tex
+++ b/0-intro.tex
@@ -14,7 +14,7 @@ In the industry, Xe/Kr separation is usually based on the cryogenic distillation
 % computation
 For the process to be viable, materials need to perform even better and many studies focus on synthesizing ever more selective materials by leveraging all chemical intuitions around noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} In order to speed the discovery process of novel materials with key properties, computational screening can identify factors explaining the performance and pre-select candidates for further experimental studies. As recently conceptualized by Lyu et al., a synergistic workflow combining computational discovery and experimental validation can push material discovery to the next stage.\autocite{Lyu_2020, Jablonka_2022} But to efficiently guide experimental discoveries, computational chemists are facing two major challenges: generating reliably more structures and evaluating them with fast and accurate models. My work will focus on the second aspect on tool development.
 
-The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 digitally constructed\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing quantity of structures, researchers are developing screening strategies to efficiently identify the best materials, while building a chemical intuition on the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to speed up their screening procedures.\autocite{Simon_2015} The current screening strategies are usually based on computational tools that are more adapted to single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, many variables are required to draw a complete picture of the performance: the selectivity, the working capacity, the kinetics and thermodynamics behind the regeneration of the material (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims at answering both these challenges by designing more efficient tools for high-throughput screening of not only the most studied selectivity performance metric, but also of transport properties and others. 
+The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 digitally constructed\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing quantity of structures, researchers are developing screening strategies to efficiently identify the best materials, while building a chemical intuition on the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to speed up their screening procedures.\autocite{Fernandez_2013,Simon_2015,Rosen_2021} The current screening strategies are usually based on computational tools that are more adapted to single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, many variables are required to draw a complete picture of the performance: the selectivity, the working capacity, the kinetics and thermodynamics behind the regeneration of the material (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims at answering both these challenges by designing more efficient tools for high-throughput screening of not only the most studied selectivity performance metric, but also of transport properties and others. 
 
 
 \begin{center}
