--- a/cover.tex
+++ b/cover.tex
@@ -11,19 +11,18 @@
 \jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Présidente du jury}
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
-\jurymember{4}{Corentin \textsc{Macqueron}}{Expert simulation physique et Référent IA, Orano}{Membre du jury}
+\jurymember{4}{Johann \textsc{William}}{Expert simulation physique et Référent IA, Orano}{Membre invité}
 \jurymember{5}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Membre du jury}
 \jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
 
-Durant ma thèse, j'ai 
-
+Mes travaux portent sur la description microscopique de matériaux nanoporeux à différent niveaux de modélisation moléculaire, incluant des approches de criblage à haut débit et d’apprentissage statistique sur des bases de données de matériaux.
 }
 
 \enabstract{
 
-During my PhD, I 
+My work concerns the high-throughput screening of nanoporous materials (mostly but not only metal-organic frameworks) at different levels of molecular modeling, focusing on Xe/Kr separation as an application.
 
 }
 
