--- a/main.tex
+++ b/main.tex
@@ -276,7 +276,7 @@
 \hyphenation{Geor-geault}
 
 %TODO Clean what's not needed
-
+\newcommand\pp[0]{:}
 \newcommand{\E}[1]{\ensuremath{\mathbb{E}{\left[#1\right]}}}
 % Convenience macros
 %% Math stuff
