--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -21,7 +21,7 @@ Transport properties were thoroughly studied using MD simulations and an ML mode
 \subsection{Final development of the optimized version of TuTraST}
 
 The diffusion calculation code can already do several things: (i) the calculation of the energy grid using the GrAED algorithm, (ii) the identification of connected components or clusters using a breadth-first search algorithm, (iii)
-the detection of channels using a simple all-direction scanning algorithm on the identified clusters, (iv) the detection of the barrier energy by using (ii) and (iii) in a loop over the energy values. The barrier energy of a given channel is defined as the energy at which the channel is connected back into at least one channel connected through at least one direction. 
+the detection of channels using a simple all-direction scanning algorithm on the identified clusters, (iv) the detection of the energy barrier by using (ii) and (iii) in a loop over the energy values. The energy barrier of a given channel is defined as the energy at which the channel is connected back into at least one channel connected through at least one direction. 
 
 To finish the implementation of the algorithm, the final step is to be able to detect the transition state surfaces that separate different clusters. This final mapping into basins connected by transition surfaces can then be used to run a simple kinetic Monte Carlo scheme and determine the diffusion coefficient. In the original paper of Mace et al.\autocite{Mace_2019}, the authors make the clusters with energy values below $E\e{min}+i\delta E$ grow layer by layer to clusters with energy values below $E\e{min}+(i+1)\delta E$. When a point of a layer of one cluster touches another cluster, this point can be considered as a transition point if the energy gap is high enough, else the two clusters merge together to form a unique cluster. The reason to use a loop over the energy values is to control the values of the transition points they can only between $E\e{min}+(i)\delta E$ and $E\e{min}+(i+1)\delta E$. If we think about it, the layer-by-layer growth does not find the highest energy point in a given direction as normally defined for transition states, instead they detect the points that are equidistant to the surface of two previous clusters. Both definitions are equivalent if $\delta E$ is infinitely small.
 
@@ -174,7 +174,7 @@ This method could be used on other materials by screening for materials with a s
 
 \subsubsection{Diffusion in a flexible environment}
 
-The transport can also be modulated by the adsorbate-induced flexibility of SBMOF-1. Depending on the structural configuration of the material, the diffusion coefficient is limiting only for some configurations of the material: it is equal to $3\times10^{-8}$~\si{\square\cm\per\s} for KAXQIL and $1\times10^{-11}$~\si{\square\cm\per\s} for UQEFED (Table~\ref{table:sbmof}). This lower diffusion coefficient can be simply explained by the change in PLD value induced by the stretching illustrated on Figure~\ref{fgr:stretch}. For a material mostly loaded by krypton molecules, the diffusion coefficient of xenon is much higher ($5\times10^{-6}$~\si{\square\cm\per\s}), although it not free diffusion, it can at least be considered as an unobstructed diffusion inside the material. 
+The transport can also be modulated by the adsorbate-induced flexibility of SBMOF-1. Depending on the structural configuration of the material, the diffusion coefficient is limiting only for some configurations of the material: it is equal to $3\times10^{-8}$~\si{\square\cm\per\s} for KAXQIL and $1\times10^{-11}$~\si{\square\cm\per\s} for UQEFED (Table~\ref{table:sbmof}). This lower diffusion coefficient can be simply explained by the change in PLD value induced by the stretching illustrated on Figure~\ref{fgr:stretch}. For a material mostly loaded by krypton molecules, the diffusion coefficient of xenon is much higher ($5\times10^{-6}$~\si{\square\cm\per\s}), although it is not free diffusion, it can at least be considered as an unobstructed diffusion inside the material. 
 
 \begin{figure}[ht]
   \centering
