--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -104,10 +104,12 @@ GrAED
       \includegraphics[width=0.7\textwidth]{figures/3-fastsim/Grid_sumup.pdf}
       \caption{Comparaison de la racine de l'erreur quadratique moyenne sur l'enthalpie d'adsorption du xénon et le temps de simulation par structure pour différentes méthodes d'échantillonage  sur la base de données CoRE MOF 2019 (pour une taille de pore supérieur à \SI{3.7}{\angstrom}). }\label{fgr:grid_perfomance}
   \end{figure}
-  
+
+\todo{ML}
 
 \section*{Propriétés de transport}
 
+\todo{ML}
 
 
 \section*{Conclusion}
