--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -31,9 +31,10 @@ La quantité de matériaux est potentiellement infinie, rien que pour les \emph{
 
 \section*{\'Etude thermodynamique de la séparation Xe/Kr}
 
+En premier lieu, mes travaux ont porté sur l'analyse poussée des corrélations qu'il pouvait exister entre les différentes grandeurs thermodynamiques décrivant la séparation xénon/krypton. Pour cela, la base de données CoRE MOF 2019 a été considéré
 La première étude se concentre sur les grandeurs thermodynamiques définies précédemment pour 9,668 structures d'une base de données CoRE MOF 2019. Ces grandeurs seront comparées entre elles via des corrélations et des comparaisons entre basse et haute pression.
 
-Pendant cette thèse, j'ai remarqué des corrélations entre l'enthalpie et la sélectivité. Sur la figure \ref{fgr:histo_H_resume}, l'enthalpie d'adsorption du xénon est assez bien corrélée au logarithme de la sélectivité à basse pression suggérant ainsi que l'affinité du xénon avec le matériau peut expliquer la sélectivité. Cette corrélation diminue cependant pour les matériaux moins sélectifs. Les matériaux les plus sélectifs ont en effet des pores dont la taille est très favorable à l'adsorption du xénon comme le suggère d'autres études. Pour des gaz nobles, seules les interactions de Van der Waals jouent un rôle important, c'est pourquoi la taille des pores permettent d'expliquer en grande partie l'affinité comparée entre deux molécules de tailles différentes le xénon et le krypton. Ainsi, dans des matériaux avec de petits pores, les phénomènes sont dominés par les interactions entre les pores et l'adsorbat, c'est-à dire par l'enthalpie. Alors que dans de larges pores, les effets entropiques jouent un rôle plus important.
+Pendant cette thèse, j'ai remarqué des corrélations entre l'enthalpie et la sélectivité. Sur la figure~\ref{fgr:histo_H_resume}, l'enthalpie d'adsorption du xénon est assez bien corrélée au logarithme de la sélectivité à basse pression suggérant ainsi que l'affinité du xénon avec le matériau peut expliquer la sélectivité. Cette corrélation diminue cependant pour les matériaux moins sélectifs. Les matériaux les plus sélectifs ont en effet des pores dont la taille est très favorable à l'adsorption du xénon comme le suggère d'autres études. Pour des gaz nobles, seules les interactions de Van der Waals jouent un rôle important, c'est pourquoi la taille des pores permettent d'expliquer en grande partie l'affinité comparée entre deux molécules de tailles différentes le xénon et le krypton. Ainsi, dans des matériaux avec de petits pores, les phénomènes sont dominés par les interactions entre les pores et l'adsorbat, c'est-à dire par l'enthalpie. Alors que dans de larges pores, les effets entropiques jouent un rôle plus important.
 
 \begin{figure}[h]
 \begin{minipage}[t]{.43\textwidth}
@@ -51,31 +52,11 @@ Pendant cette thèse, j'ai remarqué des corrélations entre l'enthalpie et la s
 \end{minipage}
 \end{figure}
 
-D'autre part, nous observons sur la figure \ref{fgr:histo_H_resume} que l'enthalpie d'échange est très bien corrélée à la sélectivité. Cela peut s'interpréter à l'aide de l'équation suivante $\Delta\e{exc}H= T\Delta\e{exc}S - RT\ln{s}$ dans le cas où $T\Delta\e{exc}S$ est quasi-constante. En effet, l'entropie joue le rôle de bruit d'un point de vue statistique ce qui est confirmé par d'autres figures au chapitre 2 de cette thèse, où l'on observe clairement l'absence totale de corrélation avec la sélectivité. Cette première figure nous renseigne ainsi sur le rôle prédominant de l'enthalpie d'échange pour expliquer la sélectivité observée. 
+D'autre part, nous observons sur la figure~\ref{fgr:histo_H_resume} que l'enthalpie d'échange est très bien corrélée à la sélectivité. Cela peut s'interpréter à l'aide de l'équation suivante $\Delta\e{exc}H= T\Delta\e{exc}S - RT\ln{s}$ dans le cas où $T\Delta\e{exc}S$ est quasi-constante. En effet, l'entropie joue le rôle de bruit d'un point de vue statistique ce qui est confirmé par d'autres figures au chapitre 2 de cette thèse, où l'on observe clairement l'absence totale de corrélation avec la sélectivité. Cette première figure nous renseigne ainsi sur le rôle prédominant de l'enthalpie d'échange pour expliquer la sélectivité observée. 
 
 La figure~\ref{fgr:overview_resume} quant à elle met en évidence la chute de la sélectivité de certains matériaux lorsque l'on passe de la basse pression à la pression ambiante. Cette différence de sélectivité est étudiée à l'aide de l'enthalpie et l'entropie d'échange. Et nous remarquons à nouveau que ce changement de sélectivité est en grande partie expliquée par une augmentation de l'enthalpie d'échange pour ces structures. L'entropie joue encore un rôle relativement mineur sur ce phénomène. L'étude des données thermodynamiques sur un ensemble de 9668 structures nous suggère que l'enthalpie d'échange définie précédemment permet d'expliquer en grande partie les tendances des sélectivités thermodynamiques à haute et basse pression. La séparation xénon/krypton est donc dominée par des effets enthalpiques. 
 
-En étudiant de plus près des matériaux qui perdent de la sélectivité à plus haute pression, ma thèse s'est intéressé de près aux origines microscopiques du changement de sélectivité observé sur la figure~\ref{fgr:overview_resume}. Pour cela, nous allons présenter dans ce résumé seulement trois structures en particulier. 
-
-\begin{figure*}[h]
-\centering
-  \includegraphics[width=0.4\textwidth]{figures/2-thermo/KAXQIL_clean.jpg}
-  \includegraphics[width=0.4\textwidth]{figures/2-thermo/KAXQIL_clean_isotherm_xenon_krypton_298K.jpg}
-  \caption{\small{\ KAXQIL : Représentation du MOF [Ca(SDB)]$\cdot$H$_2$O, où SDB = 4,$4'$-sulfonyldibenzoate rempli de xénon et de krypton. Code couleur : Ca en cyan foncé, C en gris, O en rouge, H en blanc, S en jaune ; Xe en rose and Kr en cyan clair. Sur la droite, les isothermes du xénon et krypton pures à \SI{298}{\kelvin} ainsi qu'un modèle d'isotherme de Langmuir.}}
-  \label{KAXQIL_resume}
-\end{figure*}
-
-\begin{figure*}[h]
-\centering
-  \includegraphics[width=0.4\textwidth]{figures/2-thermo/GOMRAC_clean.jpg}
-  \includegraphics[width=0.4\textwidth]{figures/2-thermo/GOMRAC_clean_isotherm_xenon_krypton_298K.jpg}
-  \caption{\small{\ GOMRAC : Représentation de l'aluminophosphate AlPO$_4$-$n$ avec la topologie LAU avec des canaux unidirectionnels d'anneaux de 10. Code couleur : Al en argent, P en orange, O en rouge ; Xe en rose and Kr en cyan clair. Sur la droite, les isothermes du xénon et krypton pures à \SI{298}{\kelvin} ainsi qu'un modèle d'isotherme de Langmuir.}}
-  \label{GOMRAC_resume}
-\end{figure*}
-
-Nous avons remarqué que parmi les structures très sélectives à basse pression, les structures qui gardaient leur sélectivité à pression ambiante présentaient souvent un seul type de site d'adsorption le long d'un unique canal comme KAXQIL sur la figure \ref{KAXQIL_resume}. Dans cette configuration les interactions intermoléculaires entre xénons peuvent être très favorables et la sélectivité à pression ambiante augmente légèrement du fait d'un phénomène collectif (inexistant à basse pression). C'est le cas de KAXQIL, on observe une augmentation de $s_0=104$ à $s_1=133$ due uniquement à des phénomènes d'origine enthalpique (stabilisation énergétiques entre xénon). Cette structure est également appelée SBMOF-1 et a fait l'objet d'une publication montrant l'intérêt de l'approche computationnelle pour trouver des matériaux nanoporeux pour la séparation xénon/krypton.
-
-Cependant, dans d'autres cas où il y a un seul type de site et un unique canal, il se peut que les interactions entre xénons ne soient pas favorisées et qu'au contraire l'augmentation du nombre de kryptons permet de stabiliser la phase adsorbée. C'est le cas de GOMRAC présenté à la figure \ref{GOMRAC_resume}, la sélectivité passe de $s_0=124$ à $s_1=47$. Nous observons également que la nature de ce changement s'explique autant par une augmentation de l'enthalpie d'échange et une diminution de l'entropie d'échange. Nous pensons qu'il y a une réorganisation des adsorbats à l'intérieur des pores afin d'optimiser les interactions entre les xénons et les kryptons, ce qui a pour conséquence d'augmenter le nombre de kryptons adsorbés et donc de faire diminuer la sélectivité.
+En étudiant de plus près des matériaux qui perdent de la sélectivité à plus haute pression, ma thèse s'est intéressé de près aux origines microscopiques du changement de sélectivité observé sur la figure~\ref{fgr:overview_resume}. Pour cela, nous allons présenter dans ce résumé une structure problématique en particulier pour illustrer les caractéristiques de la structure. 
 
 Dans d'autres cas, il n'y a pas qu'un seul type de site d'adsorption ni un seul canal unidirectionnel. Le matériau WOJJOV (figure~\ref{WOJJOV_resume}) est un exemple de structure contenant deux types de pores comme on peut le voir sur la représentation graphique et ce qui est confirmé par la validité d'un modèle à 2 sites pour décrire les isothermes corps pur. Le premier type de type est plus petit et a une taille parfaite pour adsorber le xénon. Cela explique pourquoi à basse pression la sélectivité est très bonne $s_0=146$. Lorsqu'on augmente la pression, les sites plus larges commencent à être occupés. Or ces sites plus larges sont moins sélectifs du fait de leur taille. C'est pourquoi la sélectivité diminue grandement et passe à $s_1=14$ à pression ambiante. D'autres structures ayant un système plus complexe de canaux baissent également en sélectivité avec la pression.
 
@@ -102,19 +83,68 @@ GrAED
 \begin{figure}[ht]
     \centering
       \includegraphics[width=0.7\textwidth]{figures/3-fastsim/Grid_sumup.pdf}
-      \caption{Comparaison de la racine de l'erreur quadratique moyenne sur l'enthalpie d'adsorption du xénon et le temps de simulation par structure pour différentes méthodes d'échantillonage  sur la base de données CoRE MOF 2019 (pour une taille de pore supérieur à \SI{3.7}{\angstrom}). }\label{fgr:grid_perfomance}
+      \caption{Comparaison de la racine de l'erreur quadratique moyenne sur l'enthalpie d'adsorption du xénon et le temps de simulation par structure pour différentes méthodes d'échantillonnage  sur la base de données CoRE MOF 2019 (pour une taille de pore supérieur à \SI{3.7}{\angstrom}). }\label{fgr:grid_perfomance}
   \end{figure}
 
 \todo{ML}
 
 \section*{Propriétés de transport}
 
+\begin{figure}[ht]
+    \centering
+      \includegraphics[width=0.95\textwidth]{figures/5-diffusion/Diffusion.pdf}
+      \caption{Illustration of the comparative role of the thermodynamic and transport properties for Xe/Kr separation in nanoporous materials. From the transport dominated process of membrane separation to the thermodynamically equilibrated separation processes in the nanopores, different more nuanced cases could emerge where the diffusion imposes kinetic limitations.}\label{fgr:intro_diffusion}
+  \end{figure}
+
+\todo{correlation}
+
+\begin{figure}[ht]
+\centering
+\begin{subfigure}[b]{0.48\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.pdf}
+    \caption{Energy barrier}\label{fgr:barrier_diffusion_a}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.48\textwidth}
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
+    \caption{PLD}\label{fgr:barrier_diffusion_b}
+\end{subfigure}
+    \caption{ Scatterplots of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) compared to the barrier activation energy $E\e{a}$ in \si{\kJ\per\mol} (a) for all structures  and (b) for the structures with a PLD over \SI{6}{\angstrom}.}\label{fgr:barrier_diffusion}
+\end{figure}
+
 \todo{ML}
 
+\begin{figure}[ht]
+\centering
+    \includegraphics[width=0.5\linewidth]{figures/4-ml/main/Scatterplot_G1_prediction.pdf}
+    \caption{Scatter plot of the exchange free energy predicted by the model. There is a good agreement between the predicted and true values. On the test set, there is an RMSE of \SI{0.37}{\kilo\joule\per\mole} and an MAE of \SI{0.21}{\kilo\joule\per\mole}. This plot is equivalent to the scatter plot between the logarithm of the ambient-pressure selectivity (see Figure~\ref{fgr:S1_prediction}). The corresponding errors for the ambient-pressure selectivity are 2.5 and 1.1 for respectively the RMSE and MAE of the selectivity, and 0.065 and 0.038 for the RMSE and MAE of its base-10 logarithm. }\label{fgr:G1_prediction}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+        \includegraphics[width=0.45\textwidth]{figures/3-fastsim/H_Xe_widom_vs_H_Xe_grid_overview.jpg}
+        \includegraphics[width=0.45\textwidth]{figures/3-fastsim/K_Xe_widom_vs_K_Xe_grid_overview.jpg}
+        \caption{Comparison of the xenon adsorption enthalpies (left) and the Henry constants (right) calculated by the optimized grid energy sampling (for a \SI{0.12}{\angstrom} spacing, a rejection parameter $\mu=0.8$ and an energy threshold $E\e{th}$ of \SI{100}{\kilo\joule\per\mole}) and by the Widom insertion of RASPA2 with 100,000 cycles on the CoRE MOF 2019 structures (LCD\e{CCDC} $\geq$ \SI{3.7}{\angstrom}). }\label{fgr:grid_widom}
+    \end{figure}
 
 \section*{Conclusion}
 
-
+\begin{figure}[ht]
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/5-diffusion/diffusion_prediction.pdf}
+    \caption{Prediction result}\label{fgr:diffusion_pred}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.48\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/5-diffusion/training_curve.pdf}
+      \caption{Training curve}\label{fgr:training_curve_diff}
+    \end{subfigure}
+      \caption{ (a) Comparison of the $\log_{10}$ of the diffusion coefficient predicted by an ML model and the true values. (b) Root mean squared errors on the same test set (20\% of all data) as a function of the fraction of the training set used to train smaller models. The error decreases as the amount of data increases and seems to stabilize near $0.25$. }
+  \end{figure}
 
 \vfill
 \begin{center}
